<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="bankViewModel"
            type="net.tospay.auth.ui.account.bank.BankViewModel" />
    </data>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.account.bank.OtpVeifyFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                style="?partner_banner"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@color/colorPrimary" />

            <ImageView
                android:id="@+id/btnBackImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_space_24"
                android:layout_marginLeft="@dimen/default_space_24"
                android:layout_marginTop="@dimen/default_space_16"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:focusable="true"
                android:src="@drawable/ic_back"
                android:tint="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_space_24"
                android:fontFamily="@font/proxima_nova_regular"
                android:text="@string/verify_bank_account"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/btnBackImageView"
                app:layout_constraintLeft_toRightOf="@id/btnBackImageView"
                app:layout_constraintTop_toTopOf="@id/btnBackImageView"
                android:layout_marginStart="@dimen/default_space_24" />

            <View
                android:id="@+id/curved_view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignBottom="@id/imageView3"
                android:background="@drawable/background_top_curved"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/container"
            android:layout_below="@id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/topPanel">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/app_name"
                    android:id="@+id/image"
                    android:src="@drawable/ic_asset_verify" />

                <TextView
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_header_large"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_below="@id/image"
                    android:id="@+id/verification"
                    android:fontFamily="@font/proxima_nova_semibold"
                    android:text="@string/verification"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                   android:layout_centerHorizontal="true"
                    android:textColor="@color/colorPrimary"
                    android:layout_below="@id/verification"
                    android:id="@+id/digit"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/enter_the_4_digit_code_sent_to_you"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/phoneText"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/digit"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_semibold"
                    android:text="@{bankViewModel.phone}"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    tools:text="+254712345678" />

                <com.chaos.view.PinView
                    android:id="@+id/otpView"
                    android:layout_below="@id/phoneText"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/default_space_16"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:imeOptions="actionDone"
                    android:textColor="@color/colorPrimary"
                    app:itemCount="6"
                    app:lineColor="@color/colorPrimary" />

                <net.tospay.auth.view.ErrorLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_below="@id/otpView"
                    android:id="@+id/errorLayout"
                    android:visibility="@{bankViewModel.isError ? View.VISIBLE : View.GONE}"
                    app:error_message="@{bankViewModel.errorMessage}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/resend_otp"
                    android:padding="16dp"
                    android:id="@+id/resend_otp"
                    android:layout_marginTop="16dp"
                    android:textSize="@dimen/text_size_header_medium"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/errorLayout"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btn_verify_otp_save"
                    style="@style/Tospay.Button.Large"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_space_16"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="@dimen/default_space_16"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="16dp"
                    android:onClick="@{(view)->bankViewModel.onClick(view)}"
                    android:text="Verify" />

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>

        <net.tospay.auth.view.LoadingLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{bankViewModel.isLoading?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

    </RelativeLayout>

</layout>